DirectoryResource can recursively delete a directory

--- a/src/LetThereBeTest.Tests.Integration/LetThereBeTest.Tests.Integration.csproj
+++ b/src/LetThereBeTest.Tests.Integration/LetThereBeTest.Tests.Integration.csproj
@@ -52,10 +52,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DirectoryResourceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LetThereBeTest\LetThereBeTest.csproj">
+      <Project>{EA83496D-190F-4563-84E3-57289BE92B1D}</Project>
+      <Name>LetThereBeTest</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
