FileSystemHelper can create a temporary, disposable directory

--- a/src/LetThereBeTest.Tests.Integration/LetThereBeTest.Tests.Integration.csproj
+++ b/src/LetThereBeTest.Tests.Integration/LetThereBeTest.Tests.Integration.csproj
@@ -52,7 +52,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DirectoryResourceTest.cs" />
+    <Compile Include="FileSystemHelperTest.cs" />
+    <Compile Include="FileSystemTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
