--- a/src/LetThereBeTest/LetThereBeTest.csproj
+++ b/src/LetThereBeTest/LetThereBeTest.csproj
@@ -41,6 +41,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DirectoryResource.cs" />
+    <Compile Include="FileSystem.cs" />
+    <Compile Include="FileSystemHelper.cs" />
+    <Compile Include="IFileSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
