PerformanceCounter can measure the time elapsed to perform an operation

--- a/src/LetThereBeTest.Tests.Integration/LetThereBeTest.Tests.Integration.csproj
+++ b/src/LetThereBeTest.Tests.Integration/LetThereBeTest.Tests.Integration.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="FileSystemHelperTest.cs" />
     <Compile Include="FileSystemTest.cs" />
+    <Compile Include="PerformanceCounterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
