--- a/src/LetThereBeTest/LetThereBeTest.csproj
+++ b/src/LetThereBeTest/LetThereBeTest.csproj
@@ -44,6 +44,7 @@
     <Compile Include="FileSystem.cs" />
     <Compile Include="FileSystemHelper.cs" />
     <Compile Include="IFileSystem.cs" />
+    <Compile Include="PerformanceCounter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
